# Reelattice

./: .gitignore  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: reelattice-git-push.mdc  reelattice-marketing-sync.mdc  reelattice-release.mdc
.github/workflows/: deploy-website.yml  release.yml  website-build.yml
docs/: DEVELOPER.md  PLAN.md  README.md  USER_GUIDE.md
scripts/: build-installer.ps1  download-ffmpeg.ps1  fix-icon-transparency.ps1  generate-icons.ps1  generate-installer-assets.ps1  generate-updater-keys.ps1
src/: App.tsx  index.css
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json  updater.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  paths.rs  state.rs
src-tauri/src/commands/: cases.rs  drive_detect.rs  import.rs  mod.rs
src-tauri/src/commands/events/: archive.rs  delete.rs  export.rs  mod.rs  open.rs  tags.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/tesla/: drive_watch.rs  encrypted.rs  ffmpeg.rs  grid_video.rs  grouping.rs  mod.rs  parser.rs
src/components/: app-logo.tsx  app-update-overlay.tsx  camera-badge.tsx  cases-view.tsx  changelog-view.tsx  dashcam-rec-empty.tsx  empty-illustrations.tsx  encrypted-clips-banner.tsx  event-detail-panel.tsx  event-detail-placeholder.tsx  event-header-actions.tsx  (+20 more)
website/: .env.example  .gitignore  README.md  download.html  index.html  package-lock.json  package.json  privacy.html  terms.html  vercel.json  vite.config.ts
(+96 files in other folders)
